--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,1 +1,16 @@
 main div .row{margin-top:20px}main ul:not(.browser-default).pagination{padding-left:0}main ul:not(.browser-default).pagination li a:hover{text-decoration:none}#post-title{margin:0 0 16px 0;font-size:1.85rem;font-weight:lighter}#post-date{margin:8px 0;font-size:14px}#post-date i{font-size:11.5px;margin-right:10px}#post-content{margin-top:5px}
+/* Container holding the image and the text */
+.container {
+    position: relative;
+  }
+  
+  /* Bottom right text */
+  .text-block {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    background-color: black;
+    color: white;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
