--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,37 +1,77 @@
-main div .row{margin-top:20px}main ul:not(.browser-default).pagination{padding-left:0}main ul:not(.browser-default).pagination li a:hover{text-decoration:none}#post-title{margin:0 0 16px 0;font-size:1.85rem;font-weight:lighter}#post-date{margin:8px 0;font-size:14px}#post-date i{font-size:11.5px;margin-right:10px}#post-content{margin-top:5px}
+main div .row {
+  margin-top: 20px
+}
+
+main ul:not(.browser-default).pagination {
+  padding-left: 0
+}
+
+main ul:not(.browser-default).pagination li a:hover {
+  text-decoration: none
+}
+
+#post-title {
+  margin: 0 0 16px 0;
+  font-size: 1.85rem;
+  font-weight: lighter
+}
+
+#post-date {
+  margin: 8px 0;
+  font-size: 14px
+}
+
+#post-date i {
+  font-size: 11.5px;
+  margin-right: 10px
+}
+
+#post-content {
+  margin-top: 5px
+}
+
 /* Container holding the image and the text */
+
 .container {
-    position: relative;
-  }
-  
-  /* Bottom right text */
-  .text-block {
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-    background-color: black;
-    color: white;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
+  position: relative;
+}
+
+/* Bottom right text */
+
+.text-block {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  background-color: black;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+img.bg {
+  /* Set rules to fill background */
+  min-height: 100%;
+  min-width: 1024px;
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+  /* Set up positioning */
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+@media screen and (max-width: 1024px) {
+  /* Specific to this particular image */
   img.bg {
-    /* Set rules to fill background */
-    min-height: 100%;
-    min-width: 1024px;
-      
-    /* Set up proportionate scaling */
-    width: 100%;
-    height: auto;
-      
-    /* Set up positioning */
-    position: fixed;
-    top: 0;
-    left: 0;
+    left: 50%;
+    margin-left: -512px;
+    /* 50% */
   }
-  
-  @media screen and (max-width: 1024px) { /* Specific to this particular image */
-    img.bg {
-      left: 50%;
-      margin-left: -512px;   /* 50% */
-    }
-  }
+}
+
+
+.tab {
+    display: inline-block;
+    margin-left: 40px;
+}
