--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,1 +1,146 @@
-a{color:#1a73e8}a:hover{text-decoration:underline}a:active{text-decoration:underline}main{flex:1 0 auto;font-size:16px}main img{max-width:100%;margin:auto;display:block;text-align:center}main h1,main h2,main h3,main h4,main h5,main h6{margin-bottom:.5rem;font-weight:bold;line-height:1.25;color:#313131;text-rendering:optimizeLegibility}main h1{font-size:1.85rem;font-weight:lighter;margin:4rem 0 2rem 0}main h2{margin:2em 0 1em 0;font-size:1.35rem;border-bottom:1px solid #d0d0d0}main h3{margin:1.5em 0 .75em 0;font-size:1.25rem}main h4,main h5,main h6{margin:1em 0 .5em 0;font-size:1.15rem}body{display:flex;min-height:100vh;flex-direction:column}header,main,footer{padding-left:300px}.container{width:90%}header{height:100px}header a:hover{text-decoration:none}header .background{background:linear-gradient(-45deg, rgb(102, 102, 102) 10%, rgb(141, 58, 58) 90%)}a.button-collapse.top-nav{position:absolute;text-align:center;height:48px;width:48px;top:0;float:none;color:rgb(94, 32, 32);font-size:24px;z-index:999;line-height:80px}nav .nav-wrapper{text-align:right}nav .page-title{font-size:36px;font-weight:lighter;line-height:80px;padding:0 80px}nav.top-nav{height:80px}footer.page-footer{margin-top:36px}footer.page-footer .row{margin-bottom:0px}footer.page-footer p{margin-top:5px}main ul:not(.browser-default){padding-left:40px}main ul:not(.browser-default) li{list-style-type:disc}@media only screen and (max-width: 992px){header,main,footer{padding-left:0}}@media only screen and (max-width: 600px){nav .page-title{font-size:1.75rem}}
+a {
+    color: #fcfcfc
+}
+
+d {
+    color: #e2e8ee;
+    font-size: 25px;
+    
+}
+
+a:hover {
+    text-decoration: underline
+}
+
+a:active {
+    text-decoration: underline
+}
+
+main {
+    flex: 1 0 auto;
+    font-size: 16px
+}
+
+main img {
+    max-width: 100%;
+    margin: auto;
+    display: block;
+    text-align: center
+}
+
+main h1, main h2, main h3, main h4, main h5, main h6 {
+    margin-bottom: .5rem;
+    font-weight: bold;
+    line-height: 1.25;
+    color: #313131;
+    text-rendering: optimizeLegibility
+}
+
+main h1 {
+    font-size: 1.85rem;
+    font-weight: lighter;
+    margin: 4rem 0 2rem 0
+}
+
+main h2 {
+    margin: 2em 0 1em 0;
+    font-size: 1.35rem;
+    border-bottom: 1px solid #d0d0d0
+}
+
+main h3 {
+    margin: 1.5em 0 .75em 0;
+    font-size: 1.25rem
+}
+
+main h4, main h5, main h6 {
+    margin: 1em 0 .5em 0;
+    font-size: 1.15rem
+}
+
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column
+}
+
+header, main, footer {
+    padding-left: 300px
+}
+
+.container {
+    width: 90%
+}
+
+header {
+    height: 100px
+}
+
+header a:hover {
+    text-decoration: none
+}
+
+header .background {
+    background: linear-gradient(-45deg, rgb(108, 136, 118) 10%, rgb(44, 70, 34) 90%)
+}
+
+
+a.button-collapse.top-nav {
+    position: absolute;
+    text-align: center;
+    height: 48px;
+    width: 48px;
+    top: 0;
+    float: none;
+    color: rgb(94, 32, 32);
+    font-size: 24px;
+    z-index: 999;
+    line-height: 80px
+}
+
+nav .nav-wrapper {
+    text-align: right
+}
+
+nav .page-title {
+    font-size: 36px;
+    font-weight: lighter;
+    line-height: 80px;
+    padding: 0 80px
+}
+
+nav.top-nav {
+    height: 80px
+}
+
+footer.page-footer {
+    margin-top: 36px
+}
+
+footer.page-footer .row {
+    margin-bottom: 0px
+}
+
+footer.page-footer p {
+    margin-top: 5px
+}
+
+main ul:not(.browser-default) {
+    padding-left: 40px
+}
+
+main ul:not(.browser-default) li {
+    list-style-type: disc;
+}
+
+@media only screen and (max-width: 992px) {
+    header, main, footer {
+        padding-left: 0
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    nav .page-title {
+        font-size: 1.75rem
+    }
+}
