--- a/assets/css/leetcode.css
+++ b/assets/css/leetcode.css
@@ -2,7 +2,7 @@
 body
 {
     
-    background-image: url("../images/tags.jpg");
+    background-image: url("../images/leetcode.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center; 
